<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000" >

    <TextView
        android:id="@+id/unconnected_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/connect_device"
        android:textStyle="bold"
        android:textColor="#DAE4ED"
        android:textSize="50sp"/>

    <TextView
        android:id="@+id/unconnected_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/unconnected_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/device_name"
        android:textColor="#DAE4ED"
        android:textSize="30sp" />
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
	    android:gravity="center"
	    android:layout_marginTop="100dp"
	    android:layout_below="@id/unconnected_device_name"
	    android:orientation="horizontal" >
	    <TextView
	        android:id="@+id/unconnected_first_time"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/first_time"
	        android:textColor="#1375D8"
	        android:textSize="30sp" />
	    
	    <TextView
	        android:id="@+id/unconnected_click_here"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/click_here"
	        android:textColor="#DAE4ED"
	        android:textSize="30sp" />
    </LinearLayout>
</RelativeLayout>