<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/notify_bk" >

    <TextView
        android:id="@+id/notify_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="@string/confirm_msg"
        android:layout_marginTop="60dp"
        android:textColor="#DAE4ED"
        android:textSize="20sp" />
    
    <TextView 
        android:id="@+id/notify_context"
        android:layout_below="@id/notify_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_msg"
        android:textColor="#DAE4ED"
        android:gravity="center"
        android:textSize="30sp"
		android:layout_centerHorizontal="true"
		android:singleLine="true"
        android:layout_marginTop="40dp" />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="35dp"
        android:layout_marginRight="15dp" >
	    <Button
	        android:id="@+id/cancel_btn"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/cancel"
	        android:textSize="30sp"
        	android:textColor="#DAE4ED"
	        android:gravity="center"
	        android:background="@null" />
	
	    <Button
	        android:id="@+id/confirm_btn"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textSize="30sp"
        	android:textColor="#DAE4ED"
	        android:text="@string/confirm"
	        android:gravity="center"
	        android:background="@null" />
	</LinearLayout>
</RelativeLayout>